# zvec-mcp-server

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/zvec_mcp/: __init__.py  __main__.py  schemas.py  server.py  types.py  utils.py
tests/: test_server.py
