[project]
name = "zvec-mcp-server"
dynamic = ["version"]
description = "MCP server for Zvec vector database"
authors = [
    {name = "Zvec MCP Contributors", email = "dev@example.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.15"
keywords = ["mcp", "zvec", "vector-database", "embedding", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "zvec>=0.2.1",
    "mcp>=1.1.2",
    "pydantic>=2.0.0",
    "openai>=2.24.0",
]

[project.urls]
Homepage = "https://github.com/zvec-ai/zvec-mcp-server"
Documentation = "https://github.com/zvec-ai/zvec-mcp-server#readme"
Repository = "https://github.com/zvec-ai/zvec-mcp-server"
Issues = "https://github.com/zvec-ai/zvec-mcp-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "openai>=2.24.0",
]

[project.scripts]
zvec-mcp-server = "zvec_mcp.server:mcp.run"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/zvec_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
